--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "lint": "npx eslint .",
     "dev": "nodemon app.js",
     "start": "node app.js"
-
   },
   "repository": {
     "type": "git",
@@ -26,6 +25,7 @@
   "dependencies": {
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "helmet": "^5.0.2"
   }
 }
